--- a/resources/assets/sass/global/_main.scss
+++ b/resources/assets/sass/global/_main.scss
@@ -5,11 +5,11 @@ header {
 	width: 100%;
 	margin-top: $overallMargin;
 
-	p.logo {
+	h1.logo {
 		font-size: 24px;
 		padding-bottom: 10px;
 	}
-	
+
 	&.dark {
 		color: white;
 	}
@@ -21,7 +21,7 @@ header {
 	.center-part {
 		position: absolute;
 		left: 0;
-		top: 0;		
+		top: 0;
 		width: 100%;
 		text-align: center;
 	}
