--- a/resources/assets/sass/global/_fonts.scss
+++ b/resources/assets/sass/global/_fonts.scss
@@ -1,20 +1,2 @@
-@include font-face('Cotham', '../fonts/cothamsans-webfont');
-
-// #font-charger {
-// 	left: -10000px;
-// 	top: -10000px;
-// 	position: absolute;
-// 	@include opacity(0);
-// 	#AvenirBook {
-// 		font-family: 'AvenirBook';
-// 	}
-// 	#AvenirMedium {
-// 		font-family: 'AvenirMedium';
-// 	}
-// 	#AvenirBlk {
-// 		font-family: 'AvenirBlk';
-// 	}
-// 	#Machine {
-// 		font-family: 'Machine';
-// 	}
-// }
+@include font-face('HelveticaNeue', '../fonts/helveticaneuemed-webfont', 400);
+@include font-face('HelveticaNeue', '../fonts/helveticaneuebd-webfont', 700);
