--- a/resources/assets/sass/global/_main.scss
+++ b/resources/assets/sass/global/_main.scss
@@ -7,8 +7,8 @@ header {
 
 	h1.logo {
 		font-size: 28px;
-		font-weight: bolder;
-		padding-bottom: 10px;
+		font-weight: 700;
+		padding-bottom: 6px;
 
 		& + p {
 			font-size: 12px;
@@ -65,6 +65,7 @@ footer {
 	width: 100%;
 	text-align: center;
 	position: absolute;
+	margin-top: -25px;
 	ul {
 		width: 100%;
 		text-align: center;
@@ -92,7 +93,8 @@ footer {
 #info-container {
 	h2 {
 		font-size: 11px;
-		font-weight: bolder;
+		font-weight: 700;
+		margin-bottom: 5px;
 	}
 	.info-block, .info-block a {
 		font-size: 11px;
