Update slide img size

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,356 +1,1 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none; }
-
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-/* -------------------------------------------------------------
- *  Sass CSS3 Mixins! The Cross-Browser CSS3 Sass Library
- *  By: Matthieu Aussaguel, http://www.mynameismatthieu.com, @matthieu_tweets
- *
- *  List of CSS3 Sass Mixins File to be @imported and @included as you need
- *
- *  The purpose of this library is to facilitate the use of CSS3 on different browsers avoiding HARD TO READ and NEVER
- *  ENDING css files
- *
- *  note: All CSS3 Properties are being supported by Safari 5
- *  more info: http://www.findmebyip.com/litmus/#css3-properties
- *
- *  Mixins available:
- *    -   css3-prefix             - arguments: Property, Value
- *    -   background-gradient     - arguments: Start Color: #3C3C3C, End Color: #999999
-*     -   background-horizontal   - arguments: Start Color: #3C3C3C, End Color: #999999
- *    -   background-radial       - arguments: Start Color: #FFFFFF, Start position: 0%, End Color: #000000, End position: 100%
- *    -   background-size         - arguments: Width: 100%, Height: 100%
- *    -   background-opacity      - arguments: Color: #000, Opacity: .85
- *    -   border-radius           - arguments: Radius: 5px
- *    -   border-radius-separate  - arguments: Top Left: 5px, Top Right: 5px, Bottom Left: 5px, Bottom Right: 5px
- *    -   box                     - arguments: Orientation: horizontal, Pack: center, Align: center
- *    -   box-rgba                - arguments: R: 60, G: 3, B: 12, Opacity: 0.23, Color: #3C3C3C
- *    -   box-shadow              - arguments: X: 2px, Y: 2px, Blur: 5px, Color: rgba(0,0,0,.4)
- *    -   box-sizing              - arguments: Type: border-box
- *    -   columns                 - arguments: Count: 3, Gap: 10
- *    -   double-borders          - arguments: Color One: #3C3C3C, Color Two: #999999, Radius: 0
- *    -   flex                    - arguments: Value: 1
- *    -   flip                    - arguments: ScaleX: -1
- *    -   font-face               - arguments: Font Family: myFont, Eot File Src: myFont.eot, Woff File Src: myFont.woff, Ttf File Src: myFont.ttf
- *    -   opacity                 - arguments: Opacity: 0.5
- *    -   outline radius          - arguments: Radius: 5px
- *    -   resize                  - arguments: Direction: both
- *    -   rotate                  - arguments: Degree: 0, M11: 0, M12: 0, M21: 0, M22: 0
- *    CSS Matrix Rotation Calculator http://www.boogdesign.com/examples/transforms/matrix-calculator.html
- *    -   text-shadow             - arguments: X: 2px, Y: 2px, Blur: 5px, Color: rgba(0,0,0,.4)
- *    -   transform               - arguments: Parameters: null
- *    -   transform-style         - arguments: Style: preserve-3d
- *    -   transition              - Default arguments: What: all, Length: 1s, Easing: ease-in-out
- *    -                           - Examples: @include transition (all 2s ease-in-out);
- *    -                                       @include transition (opacity 1s ease-in 2s, width 2s ease-out);
- *    -   triple-borders          - arguments: Color One: #3C3C3C, Color Two: #999999, Color Three: #000000, Radius: 0
- *    -   keyframes               - arguments: Animation name
- *                                - content:   Animation css
- *    -   animation               - arguments: name duration timing-function delay iteration-count direction fill-mode play-state
-                                             (http://www.w3schools.com/cssref/css3_pr_animation.asp)
- *    -  simpleAnim               - arguments: Duration, Delay, ease, element: all
- *    -  anim                     - arguments: Duration, Delay, ease, transform, originX: 50%, originY: 50%, element: all
- *-------------------------------------------------------------*/
-@font-face {
-  font-family: "HelveticaNeue";
-  font-weight: 400;
-  src: url("../fonts/helveticaneuemed-webfont.eot?") format("eot"), url("../fonts/helveticaneuemed-webfont.woff") format("woff"), url("../fonts/helveticaneuemed-webfont.ttf") format("truetype"), url("../fonts/helveticaneuemed-webfont.svg#HelveticaNeue") format("svg"); }
-
-@font-face {
-  font-family: "HelveticaNeue";
-  font-weight: 700;
-  src: url("../fonts/helveticaneuebd-webfont.eot?") format("eot"), url("../fonts/helveticaneuebd-webfont.woff") format("woff"), url("../fonts/helveticaneuebd-webfont.ttf") format("truetype"), url("../fonts/helveticaneuebd-webfont.svg#HelveticaNeue") format("svg"); }
-
-html, body {
-  padding: 0;
-  margin: 0;
-  font-family: "HelveticaNeue", "Helvetica Neue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 400;
-  background-color: #ffffff;
-  letter-spacing: 0.5px;
-  line-height: 22px;
-  font-size: 16px;
-  color: #000000; }
-  @media screen and (max-height: 600px) {
-    html, body {
-      font-size: 13px; } }
-
-::-moz-selection {
-  background: #cacaca;
-  /* WebKit/Blink Browsers */ }
-
-::selection {
-  background: #cacaca;
-  /* WebKit/Blink Browsers */ }
-
-::-moz-selection {
-  background: #cacaca;
-  /* Gecko Browsers */ }
-
-body {
-  overflow-y: scroll;
-  overflow-x: hidden; }
-
-#app-container, #info-container {
-  -webkit-font-smoothing: antialiased;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-  cursor: default;
-  position: static;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: auto; }
-
-.top-part {
-  position: relative;
-  width: 100%;
-  overflow: hidden; }
-
-#info-container {
-  position: static;
-  text-transform: uppercase;
-  padding-bottom: 20px; }
-  #info-container .inside-holder {
-    width: 100%;
-    text-align: center; }
-  #info-container .info-block {
-    display: inline-table;
-    text-align: left;
-    margin-top: 40px; }
-    #info-container .info-block, #info-container .info-block a, #info-container .info-block li {
-      color: #000000;
-      line-height: 18px;
-      -o-user-select: text;
-      -moz-user-select: text;
-      -webkit-user-select: text;
-      -ms-user-select: text;
-      user-select: text; }
-    #info-container .info-block a {
-      padding: 3px; }
-      #info-container .info-block a:not([href^="mailto"]) {
-        display: block;
-        margin-top: -3px; }
-    @media screen and (max-width: 768px) {
-      #info-container .info-block {
-        text-align: center; } }
-  #info-container .info-block:nth-child(2) {
-    padding: 0 8% 0 8%; }
-
-* {
-  backface-visibility: hidden;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  transform-style: flat;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-user-drag: none;
-  outline: 0; }
-
-*, *:before, *:after {
-  box-sizing: inherit; }
-
-button {
-  background: none repeat scroll 0 0 transparent;
-  border: medium none;
-  border-spacing: 0;
-  list-style: none outside none;
-  margin: 0;
-  padding: 0;
-  text-align: left;
-  text-decoration: none;
-  text-indent: 0;
-  cursor: pointer; }
-
-img {
-  border: 0;
-  border-style: none;
-  outline: none;
-  border: none; }
-
-svg, svg * {
-  backface-visibility: hidden; }
-
-.clear-float {
-  clear: both; }
-
-img {
-  width: 100%; }
-
-a:-moz-focus-inner {
-  border: 0;
-  outline: none; }
-
-a:focus {
-  border: 0;
-  outline: none; }
-
-img {
-  -ms-interpolation-mode: bicubic; }
-
-img {
-  background: transparent;
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF)";
-  /* IE8 */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF);
-  /* IE6 & 7 */
-  zoom: 1; }
-
-.btn {
-  cursor: pointer; }
-
-.relative {
-  position: relative;
-  width: 100%;
-  height: 100%; }
-
-.full, #app-container, #info-container, section#container, section#container li, section#container li .image-container {
-  width: 100%;
-  height: 100%; }
-
-.top-left, .full-block, section#container {
-  top: 0;
-  left: 0; }
-
-.vertical-center-parent {
-  width: 100%;
-  height: 100%;
-  display: table; }
-
-.vertical-center-child {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center; }
-
-.full-block {
-  position: absolute; }
-
-a {
-  font-size: 16px;
-  color: #ffffff;
-  text-decoration: none; }
-  @media screen and (max-height: 600px) {
-    a {
-      font-size: 13px; } }
-
-header {
-  position: absolute;
-  z-index: 2;
-  text-align: center;
-  width: 100%;
-  margin-top: 20px; }
-  header h1.logo {
-    font-size: 28px;
-    font-weight: 700;
-    padding-bottom: 6px; }
-    header h1.logo + p {
-      font-size: 12px; }
-  header.dark {
-    color: white; }
-  header > div {
-    display: inline-block;
-    /* For normal, healthy browsers */ }
-    * html header > div {
-      /* for IE6 */
-      display: inline; }
-    * + html header > div {
-      /* for IE7 */
-      display: inline; }
-  header .center-part {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    text-align: center; }
-
-section#container {
-  position: absolute; }
-  section#container ul {
-    transition-property: all;
-    transition-duration: 0s;
-    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-    transition-delay: 0.7s; }
-  section#container li {
-    position: absolute;
-    overflow: hidden;
-    opacity: 0;
-    transition-property: all;
-    transition-duration: 0.6s;
-    transition-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
-    transition-delay: 0s; }
-    section#container li.active {
-      transition-property: all;
-      transition-duration: 0.8s;
-      transition-timing-function: cubic-bezier(0.445, 0.05, 0.55, 0.95);
-      transition-delay: 0.8s;
-      opacity: 1; }
-    section#container li img {
-      position: absolute;
-      top: 0;
-      left: 0; }
-    section#container li .image-container {
-      text-align: center; }
-
-footer {
-  width: 100%;
-  text-align: center;
-  position: absolute; }
-  footer ul {
-    width: 100%;
-    text-align: center; }
-    footer ul li {
-      opacity: 0;
-      width: 100%;
-      text-align: center;
-      position: absolute;
-      text-transform: uppercase;
-      top: 0;
-      left: 0; }
-      footer ul li.active {
-        opacity: 1; }
-    footer ul .slide-num {
-      padding-left: 10px;
-      padding-right: 10px;
-      font-size: 9px; }
-
-#info-container h2 {
-  font-size: 11px;
-  font-weight: 700;
-  margin-bottom: 5px; }
-
-#info-container .info-block, #info-container .info-block a {
-  font-size: 11px; }
-
-/*# sourceMappingURL=app.css.map */
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}@font-face{font-family:HelveticaNeue;font-weight:400;src:url(../fonts/helveticaneuemed-webfont.eot?) format("eot"),url(../fonts/helveticaneuemed-webfont.woff) format("woff"),url(../fonts/helveticaneuemed-webfont.ttf) format("truetype"),url(../fonts/helveticaneuemed-webfont.svg#HelveticaNeue) format("svg")}@font-face{font-family:HelveticaNeue;font-weight:700;src:url(../fonts/helveticaneuebd-webfont.eot?) format("eot"),url(../fonts/helveticaneuebd-webfont.woff) format("woff"),url(../fonts/helveticaneuebd-webfont.ttf) format("truetype"),url(../fonts/helveticaneuebd-webfont.svg#HelveticaNeue) format("svg")}body,html{padding:0;margin:0;font-family:HelveticaNeue,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;font-weight:400;background-color:#fff;letter-spacing:.5px;line-height:22px;font-size:16px;color:#000}@media screen and (max-height:600px){body,html{font-size:13px}}::selection{background:#cacaca}::-moz-selection{background:#cacaca}body{overflow-y:scroll;overflow-x:hidden}#app-container,#info-container{-webkit-font-smoothing:antialiased;text-shadow:1px 1px 1px rgba(0,0,0,.004);cursor:default;position:static;overflow-x:hidden;overflow-y:hidden;height:auto}.top-part{position:relative;width:100%;overflow:hidden}#info-container{position:static;text-transform:uppercase;padding-bottom:20px}#info-container .inside-holder{width:100%;text-align:center}#info-container .info-block{display:inline-table;text-align:left;margin-top:40px}#info-container .info-block,#info-container .info-block a,#info-container .info-block li{color:#000;line-height:18px;-o-user-select:text;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text}#info-container .info-block a{padding:3px}#info-container .info-block a:not([href^=mailto]){display:block;margin-top:-3px}@media screen and (max-width:768px){#info-container .info-block{text-align:center}}#info-container .info-block:nth-child(2){padding:0 8%}*{backface-visibility:hidden;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;transform-style:flat;-webkit-tap-highlight-color:transparent;-webkit-user-drag:none;outline:0}*,:after,:before{box-sizing:inherit}button{background:none repeat scroll 0 0 transparent;border:medium none;border-spacing:0;list-style:none outside none;margin:0;padding:0;text-align:left;text-decoration:none;text-indent:0;cursor:pointer}img{border:0;border-style:none;outline:none;border:none}svg,svg *{backface-visibility:hidden}.clear-float{clear:both}img{width:100%}a:-moz-focus-inner{border:0;outline:none}a:focus{border:0;outline:none}img{-ms-interpolation-mode:bicubic;background:transparent;-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF)";filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF);zoom:1}.btn{cursor:pointer}.relative{position:relative}#app-container,#info-container,.full,.relative,section#container,section#container li,section#container li .image-container{width:100%;height:100%}.full-block,.top-left,section#container{top:0;left:0}.vertical-center-parent{width:100%;height:100%;display:table}.vertical-center-child{display:table-cell;vertical-align:middle;text-align:center}.full-block{position:absolute}a{font-size:16px;color:#fff;text-decoration:none}@media screen and (max-height:600px){a{font-size:13px}}header{position:absolute;z-index:2;text-align:center;width:100%;margin-top:20px}header h1.logo{font-size:28px;font-weight:700;padding-bottom:6px}header h1.logo+p{font-size:12px}header.dark{color:#fff}header>div{display:inline-block}*+html header>div,* html header>div{display:inline}header .center-part{position:absolute;left:0;top:0;width:100%;text-align:center}section#container{position:absolute}section#container ul{transition-property:all;transition-duration:0s;transition-timing-function:cubic-bezier(.19,1,.22,1);transition-delay:.7s}section#container li{position:absolute;overflow:hidden;opacity:0;transition-property:all;transition-duration:.6s;transition-timing-function:cubic-bezier(.39,.575,.565,1);transition-delay:0s}section#container li.active{transition-property:all;transition-duration:.8s;transition-timing-function:cubic-bezier(.445,.05,.55,.95);transition-delay:.8s;opacity:1}section#container li img{position:absolute;top:0;left:0}section#container li .image-container{text-align:center}footer{position:absolute}footer,footer ul,footer ul li{width:100%;text-align:center}footer ul li{opacity:0;position:absolute;text-transform:uppercase;top:0;left:0}footer ul li.active{opacity:1}footer ul .slide-num{padding-left:10px;padding-right:10px;font-size:9px}#info-container h2{font-size:11px;font-weight:700;margin-bottom:5px}#info-container .info-block,#info-container .info-block a{font-size:11px}
